hphp/test/slow/object/const/redeclare-to-const-in-trait.php.expectf
Fatal error: trait declaration of property 'p' is incompatible with previous declaration in %s/redeclare-to-const-in-trait.php on line 5
